# Fennec

./: .gitignore  CLAUDE.md  Fennec.sln  README.md  compose.yml  justfile  prd.json  private.pem  progress.txt  public.pem
.github/workflows/: release.yml
Fennec.Api/: Dockerfile  Fennec.Api.csproj  Program.cs  appsettings.Development.json  todo
Fennec.Api.Tests/: DbSetMockExtensions.cs  Fennec.Api.Tests.csproj  TestAsyncQueryProvider.cs
Fennec.Api.Tests/Commands/: CreateChannelCommandTests.cs  CreateChannelGroupCommandTests.cs  CreateServerInviteCommandTests.cs  DeleteChannelCommandTests.cs  DeleteChannelGroupCommandTests.cs  DeleteServerInviteCommandTests.cs  JoinServerCommandTests.cs  JoinServerFederateCommandTests.cs  RenameChannelCommandTests.cs  RenameChannelGroupCommandTests.cs  UpdateChannelTypeCommandTests.cs
Fennec.Api.Tests/Middlewares/: AuthenticationMiddlewareTests.cs
Fennec.Api.Tests/Queries/: ListChannelGroupsQueryTests.cs  ListChannelsQueryTests.cs
Fennec.Api.Tests/Services/: NotificationServiceTests.cs  VoiceStateServiceTests.cs
Fennec.Api/Behaviors/: LoggingBehavior.cs
Fennec.Api/Commands/: CreateChannelCommand.cs  CreateChannelGroupCommand.cs  CreatePublicTokenCommand.cs  CreateServerCommand.cs  CreateServerInviteCommand.cs  DeleteChannelCommand.cs  DeleteChannelGroupCommand.cs  DeleteServerInviteCommand.cs  JoinServerCommand.cs  JoinServerFederateCommand.cs  LoginCommand.cs  LogoutCommand.cs  RegisterUserCommand.cs  RenameChannelCommand.cs  RenameChannelGroupCommand.cs  SendMessageCommand.cs  UpdateChannelTypeCommand.cs
Fennec.Api/Controllers/: AuthController.cs  AuthController.http  ServerController.cs  ServerController.http  WellKnownController.cs  WellKnownController.http  _FennecControllerBase.cs  http-client.env.json
Fennec.Api/Events/: MessageReceivedEvent.cs
Fennec.Api/FederationClient/: FederationClient.cs  FederationSigningHandler.cs  TargetedFederationClient.cs
Fennec.Api/Hubs/: MessageHub.cs
Fennec.Api/Middlewares/: AuthenticationMiddleware.cs  ExceptionMiddleware.cs  RequestLoggingMiddleware.cs
Fennec.Api/Migrations/: 20260304190213_Initial.Designer.cs  20260304190213_Initial.cs  20260305214534_Initial.Designer.cs  20260305214534_Initial.cs  20260306192204_AddServer.Designer.cs  20260306192204_AddServer.cs  20260306195451_MakeSessionTokenIndex.Designer.cs  20260306195451_MakeSessionTokenIndex.cs  20260306201250_AddServerVisibility.Designer.cs  20260306201250_AddServerVisibility.cs  20260306203637_MakesServerMembersUnique.Designer.cs  20260306203637_MakesServerMembersUnique.cs  20260306205108_AddServerGroupsAndChannels.Designer.cs  20260306205108_AddServerGroupsAndChannels.cs  20260306210730_RemoveServerSlug.Designer.cs  (+24 more)
Fennec.App/: App.axaml  App.axaml.cs  AppBootstrap.cs  Fennec.App.csproj  Program.cs  ThemeKeys.cs  ViewLocator.cs  app.manifest
Fennec.App.Browser/: Fennec.App.Browser.csproj  Program.cs
Fennec.App.Desktop/: Dockerfile.smoke  Fennec.App.Desktop.csproj  Info.plist  Program.cs  entrypoint.sh
Fennec.App.Tests/: Fennec.App.Tests.csproj  TestApp.cs
Fennec.Client/: AuthHandler.cs  ClientFactory.cs  Fennec.Client.csproj  FennecClient.cs  HttpResponseMessageExtensions.cs  IClientFactory.cs  ITokenStore.cs  Ipv4HttpHandler.cs  MessageHubClient.cs  TokenProvider.cs  TokenStore.cs  UrlUtils.cs
Fennec.Integration.Tests/: Fennec.Integration.Tests.csproj  HubTestHelper.cs  ScreenShareSignalingTests.cs  ScreenShareWebRtcTests.cs  TestApiFactory.cs
Fennec.Shared/: SharedFennecJsonContext.cs
docs/: Authentication.md  Developing.md  Reactions.md
k8s/: README.md  fennec-api.yaml  fennec-app-local.yaml  fennec-app-mini.yaml  ingress.yaml  namespace.yaml  postgres-seed-configmap.yaml  postgres.yaml  secrets.yaml  seed-job.yaml  seed.sql  setup-secrets.sh  smoke-dashboard.yaml  smoke.env.example  test-runner.yaml
native/: CMakeLists.txt  fennec_video.h
native/linux/: CMakeLists.txt  CopyFFmpegLibs.cmake  fennec_capture_stub.c  fennec_decoder.c  fennec_encoder.c
native/macos/: CMakeLists.txt  fennec_capture.m  fennec_capture_internal.h  fennec_decoder.m  fennec_encoder.m  fennec_picker.m
native/windows/: CMakeLists.txt  fennec_capture.c  fennec_decoder.c  fennec_encoder.c
smoke-tests/: Dockerfile  helpers.sh  screen-share-smoke.sh
tasks/: prd-app-domain-extraction.md  prd-ddd-cleanup.md  prd-message-domain-model.md  progress.txt
(+427 files in other folders)
